--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 1050px)" />
-  <title>Document</title>
+  <title>API Rest - Express JS</title>
 </head>
 
 <body>
